src/codegen/tests/snapshots/rusty__codegen__tests__compare_instructions_tests__aliased_ranged_number_type_comparing_test.snap
---
source: src/codegen/tests/compare_instructions_tests.rs
assertion_line: 186
expression: result
---
; ModuleID = 'main'
source_filename = "main"

define i16 @baz() {
entry:
  %x = alloca i16, align 2
  %y = alloca i16, align 2
  %baz = alloca i16, align 2
  store i16 0, i16* %x, align 2
  store i16 0, i16* %y, align 2
  store i16 0, i16* %baz, align 2
  %load_x = load i16, i16* %x, align 2
  %0 = sext i16 %load_x to i32
  %tmpVar = icmp eq i32 %0, 3
  %load_x1 = load i16, i16* %x, align 2
  %1 = sext i16 %load_x1 to i32
  %load_y = load i16, i16* %y, align 2
  %2 = sext i16 %load_y to i32
  %tmpVar2 = icmp slt i32 %1, %2
  %load_y3 = load i16, i16* %y, align 2
  %3 = sext i16 %load_y3 to i32
  %tmpVar4 = icmp sle i32 %3, 0
  %baz_ret = load i16, i16* %baz, align 2
  ret i16 %baz_ret
}

