src/codegen/tests/snapshots/rusty__codegen__tests__compare_instructions_tests__ranged_number_type_comparing_test.snap
---
source: src/codegen/tests/compare_instructions_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @baz() {
entry:
  %baz = alloca i16, align [filtered]
  %x = alloca i16, align [filtered]
  %y = alloca i16, align [filtered]
  store i16 0, ptr %x, align [filtered]
  store i16 0, ptr %y, align [filtered]
  store i16 0, ptr %baz, align [filtered]
  %load_x = load i16, ptr %x, align [filtered]
  %0 = sext i16 %load_x to i32
  %tmpVar = icmp eq i32 %0, 3
  %load_x1 = load i16, ptr %x, align [filtered]
  %1 = sext i16 %load_x1 to i32
  %load_y = load i16, ptr %y, align [filtered]
  %2 = sext i16 %load_y to i32
  %tmpVar2 = icmp slt i32 %1, %2
  %load_y3 = load i16, ptr %y, align [filtered]
  %3 = sext i16 %load_y3 to i32
  %tmpVar4 = icmp sle i32 %3, 0
  %baz_ret = load i16, ptr %baz, align [filtered]
  ret i16 %baz_ret
}
